# zhihui-robot

./: .gitignore  .project  CMakeLists.txt  README.md  sdkconfig
components/: CMakeLists.txt
components/round_lcd/: lcdfontlib.c  lcdpicturelib.c  lcdpicturelib.h  round_lcd.cpp  round_lcd.h
components/screen/: CMakeLists.txt  Kconfig  component.mk  screen_driver.c
components/screen/controller_driver/gc9a01/: gc9a01.c  gc9a01.h
components/sensors/: CMakeLists.txt  Kconfig  component.mk
components/sensors/gesture/paj7620/: paj7620.cpp  paj7620.h
components/sensors/imu/mpu6050/: CMakeLists.txt  component.mk
components/sensors/sensor_hub/: CMakeLists.txt
components/servo/: servo.cpp  servo.h
main/: CMakeLists.txt  main.cpp  robot.cpp  robot.h  robot_face_screen.cpp  robot_face_screen.h  usb_robot.cpp  usb_robot.h  utils.h
sensor/: CMakeLists.txt
sensor/paj7620/: paj7620.cpp  paj7620.h
sensor/round_lcd/: font.h  gc9a01.cpp  gc9a01.h  lcdfontlib.h  pic.h  round_lcd.cpp  round_lcd.h
sensor/servo/: servo.cpp  servo.h
